# Sentimatrix-Studio

./: .gitignore  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  requirements.txt
backend/: .env.example  =0.2.2  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  health.py  oauth.py  projects.py  results.py  schedules.py  scrape.py  settings.py  targets.py  webhooks.py  websocket.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  deps.py  encryption.py  error_handler.py  exceptions.py  logging.py  rate_limit.py  security.py  validators.py
backend/app/db/: __init__.py  mongodb.py
backend/app/middleware/: __init__.py  request_id.py
backend/app/models/: __init__.py  auth.py  base.py  llm_provider.py  preset.py  project.py  result.py  schedule.py  scrape_job.py  target.py  user.py  webhook.py
backend/app/repositories/: __init__.py  api_key.py  base.py  preset.py  project.py  result.py  schedule.py  scrape_job.py  target.py  user.py  webhook.py
backend/app/services/: auth.py  dashboard_service.py  presets.py  scheduler.py  scrape_executor.py  sentimatrix_service.py  webhook_service.py
backend/app/utils/: password.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_health.py  test_projects.py  test_schedules.py  test_settings.py  test_targets.py  test_webhooks.py
backend/tests/integration/: test_scraping_pipeline.py  test_user_repository.py
backend/tests/unit/: test_config.py  test_encryption.py  test_llm_providers.py  test_models.py  test_password.py  test_presets.py  test_schedule_models.py  test_security.py  test_webhook_models.py
docker/: mongo-init.js  redis.conf
docs/: README.md
docs/api/: analysis.md  authentication.md  overview.md  projects.md  scrapers.md  users.md  webhooks.md
docs/api-reference/: authentication.md  billing.md  jobs.md  overview.md  projects.md  results.md  schedules.md  settings.md  targets.md  webhooks.md
docs/architecture/: components.md  data-flow.md  overview.md  security.md
docs/database/: collections.md  indexes.md  schema.md
docs/deployment/: docker.md  local.md
docs/frontend/: pages.md  (+4 more)
frontend/: .env.local  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: backup_db.sh  deploy.sh  restore_db.sh  seed_test_data.py  setup.sh
templates/: index.html  individual_signup.html  organisation_signup.html  signin.html
(+109 files in other folders)
